<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_dialog_title"
        android:textSize="25sp"
        android:textColor="@color/lighterBlue"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:background="@color/darkerBlue"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation"
        android:textColor="@android:color/black"
        android:typeface="monospace"
        android:textSize="22sp"
        android:textAlignment="center"
        android:padding="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cancel_button"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/lightYellowGreen"
            android:background="@color/green"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/delete_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ok_button"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/veryLightRed"
            android:background="@color/likeCrimson"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>