<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/clicked_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/nearlyWhite"
        android:background="@color/darkerBlue"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginBottom="5dp"/>
    <RadioGroup
        android:id="@+id/functions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/list_open_function"
            android:textColor="@color/darkBlue"
            android:background="@color/lighterBlue"
            android:buttonTint="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="3dp"/>
        <RadioButton
            android:id="@+id/download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/list_download_function"
            android:textColor="@color/darkBlue"
            android:background="@color/lighterBlue"
            android:buttonTint="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="3dp"/>
        <RadioButton
            android:id="@+id/rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/list_rename_function"
            android:textColor="@color/darkBlue"
            android:buttonTint="@android:color/holo_blue_dark"
            android:background="@color/lighterBlue"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="3dp"/>
        <RadioButton
            android:id="@+id/move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/list_move_function"
            android:textColor="@color/darkBlue"
            android:buttonTint="@android:color/holo_blue_dark"
            android:background="@color/lighterBlue"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="3dp"/>
        <RadioButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/list_delete_function"
            android:textColor="@color/darkBlue"
            android:buttonTint="@android:color/holo_blue_dark"
            android:background="@color/lighterBlue"
            android:textSize="20sp"
            android:padding="15dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="3dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textSize="20sp"
            android:textColor="@color/lightYellowGreen"
            android:background="@color/green"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="20dp"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:textSize="20sp"
            android:textColor="@color/veryLightRed"
            android:background="@color/likeCrimson"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="20dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

</LinearLayout>