<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/lighterBlue"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/rename_dialog_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/lighterBlue"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:padding="10dp"
        android:background="@color/darkerBlue"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:text="@string/rename_instruction"
        android:typeface="monospace"
        android:paddingTop="7dp"
        android:paddingBottom="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"/>

    <EditText
        android:id="@+id/item_name_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@android:color/white"
        android:typeface="monospace"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingBottom="5dp"
        android:textAlignment="center"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxWidth="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">
        <Button
            android:id="@+id/rename_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/lightYellowGreen"
            android:text="@string/ok_button"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:padding="10dp"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/rename_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/likeCrimson"
            android:textColor="@color/veryLightRed"
            android:text="@string/cancel_button"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:padding="10dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

</LinearLayout>