<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_explorer_dialog_title"
        android:background="@color/darkerBlue"
        android:textSize="25sp"
        android:textColor="@color/lighterBlue"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:padding="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrayBlue"
        android:padding="15dp">
        <TextView
            android:id="@+id/move_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkBlue"
            android:textSize="35sp"
            android:text="@string/icon_go_back"
            android:paddingEnd="10dp"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/chosen_location_name_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            android:typeface="monospace"
            android:layout_toEndOf="@id/move_go_back"
            android:gravity="center"
            android:background="@android:color/white"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/move_file_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/move_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textSize="20sp"
            android:textColor="@color/lightYellowGreen"
            android:background="@color/green"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="20dp"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/move_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:textSize="20sp"
            android:textColor="@color/veryLightRed"
            android:background="@color/likeCrimson"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="20dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

</LinearLayout>